fix: contact spacing

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -70,7 +70,7 @@
     width: 20%;
     position: relative;
     min-width: 250px;
-    margin: 1rem 0;
+    margin: 1rem;
     &:hover {
         .projectInfo {
             display: flex;
@@ -109,6 +109,7 @@
     a {
         color: $cream;
         font-size: 2rem;
+        margin-bottom: 2rem;
     }
 }
 @media (max-width: 768px) {
